# nac_fields

./: main.py  pyproject.toml  setup.py  voronoi.py
nac/: __init__.py  clustering.c  clustering.pyx  data.py  loss.py  metrics.py  network.py  normals.py  preprocess.py  reconstruct.py  reconstruction.py  utils.py  visualization.py  voronoi.py
training/: train_neural_separate_normal_based_loss.py
